fixed menu z-index on mobile

--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -14,6 +14,7 @@
 }
 
 .jp-menu__main {
+    z-index: 10;
     transition: background .3s, color .3s;
 }
 
